--- a/src/client/src/components/LoginCard/styles.module.css
+++ b/src/client/src/components/LoginCard/styles.module.css
@@ -39,18 +39,18 @@
 
 .cardTitle {
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 16px;
   display: flex;
   align-items: center;
 }
 
 .cardBody {
-  margin-bottom: 1em;
+  margin-bottom: 5%;
 }
 
 .details {
   color: var(--vscode-textLink-foreground);
-  font-size: var(--vscode-editor-font-size);
+  font-size: 14px;
   background: none;
   border: none;
   text-decoration: none;
@@ -67,5 +67,5 @@
 
 .icon {
   height: 36px;
-  margin-right: 0.5em;
+  margin-right: 10px;
 }
