--- a/src/client/src/components/Title/styles.module.css
+++ b/src/client/src/components/Title/styles.module.css
@@ -2,6 +2,6 @@
   font-size: 18px;
   margin-top: 1.75em;
   margin-right: 1%;
-  margin-bottom: 3px;
+  margin-bottom: 12px;
   font-weight: bold;
 }
